DigIn Dashboard Excel/CSV widget - Improve the excel/csv upload Interface DUODIGIN-1193 , alignment issues in tables, removed drill down button,

--- a/shell/styles/css/customer-1.0.css
+++ b/shell/styles/css/customer-1.0.css
@@ -144,6 +144,10 @@ v-pane-content
     margin-left: 7px;
 }
 
+.selectedRow > span , .unSelectedRow > span {
+    white-space: nowrap;
+}
+
 .unSelectedRow {
     background-color: rgba(255, 255, 255, 0.9) !important;
 }
